main_modelos_cinetica.ipynb

--- a/main_modelos_cinetica.ipynb
+++ b/main_modelos_cinetica.ipynb
@@ -42,7 +42,7 @@
    "outputs": [],
    "source": [
     "# Cargamos los datos\n",
-    "datos = pd.read_excel('Heparina_IGA_mod.xlsx', sheet_name='HCl')"
+    "datos = pd.read_excel('Diclofenaco_IGA_mod.xlsx', sheet_name='HCl')"
    ]
   },
   {
